[gd_scene load_steps=38 format=3 uid="uid://1h24hba514qq"]

[ext_resource type="Script" uid="uid://drvp2h6p6ennw" path="res://Assets/Scenes/Areas/area_1.gd" id="1_7fk0h"]
[ext_resource type="PackedScene" uid="uid://br4bmuwc5rwhj" path="res://Assets/Scenes/player.tscn" id="2_3uyhe"]
[ext_resource type="TileSet" uid="uid://jnpp80o3230q" path="res://Assets/Sprites/my_tileset.tres" id="2_6rwvx"]
[ext_resource type="PackedScene" uid="uid://cit4kytxcbs6u" path="res://Assets/Scenes/background.tscn" id="3_8wi1m"]
[ext_resource type="Texture2D" uid="uid://c374lurfl1ew0" path="res://Assets/Sprites/boilingPot.png" id="5_nlyig"]
[ext_resource type="Script" uid="uid://coojivlj7ytxw" path="res://Assets/Scripts/tutorial_button.gd" id="6_f20k6"]
[ext_resource type="Texture2D" uid="uid://ch7ajoyfxrh25" path="res://Assets/Sprites/forwardButton.png" id="6_msn23"]
[ext_resource type="Texture2D" uid="uid://ctijk4drnxtua" path="res://Assets/Sprites/backwardButton.png" id="8_f20k6"]
[ext_resource type="Texture2D" uid="uid://cj527o0asfxi1" path="res://Assets/Sprites/spaceButton.png" id="9_0ufq0"]
[ext_resource type="Script" uid="uid://mi2edq0k7tpa" path="res://Assets/Scripts/friend.gd" id="10_u1wc8"]
[ext_resource type="Texture2D" uid="uid://4rg4kgpb7xmp" path="res://Assets/Sprites/broccoliIdle.png" id="11_xl8b6"]
[ext_resource type="Texture2D" uid="uid://0sc2axlqm3rd" path="res://Assets/Sprites/rope_under.png" id="12_6rwvx"]
[ext_resource type="Texture2D" uid="uid://dydojivpgfxdj" path="res://Assets/Sprites/broccoliStuck.png" id="12_ys1tx"]
[ext_resource type="Texture2D" uid="uid://0hpuuk3mm7sp" path="res://Assets/Sprites/rope_progress.png" id="13_xl8b6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_les6p"]
atlas = ExtResource("5_nlyig")
region = Rect2(0, 0, 45, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyxsd"]
atlas = ExtResource("5_nlyig")
region = Rect2(45, 0, 45, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dh7p"]
atlas = ExtResource("5_nlyig")
region = Rect2(90, 0, 45, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_msn23"]
animations = [{
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_les6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyxsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dh7p")
}],
"loop": true,
"name": &"boilingPot",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f20k6"]
radius = 24.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ufq0"]
radius = 25.0
height = 52.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0ufq0"]
atlas = ExtResource("6_msn23")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1wc8"]
atlas = ExtResource("6_msn23")
region = Rect2(150, 0, 150, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_7lgy5"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_0ufq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1wc8")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7lgy5"]
atlas = ExtResource("8_f20k6")
region = Rect2(0, 0, 150, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnluw"]
atlas = ExtResource("8_f20k6")
region = Rect2(150, 0, 150, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rwvx"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_7lgy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnluw")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6rwvx"]
atlas = ExtResource("9_0ufq0")
region = Rect2(0, 0, 249, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl8b6"]
atlas = ExtResource("9_0ufq0")
region = Rect2(249, 0, 249, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_ys1tx"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_6rwvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl8b6")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ttsc2"]
atlas = ExtResource("11_xl8b6")
region = Rect2(0, 0, 267, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbrap"]
atlas = ExtResource("11_xl8b6")
region = Rect2(534, 0, 267, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys1tx"]
atlas = ExtResource("12_ys1tx")
region = Rect2(0, 0, 370, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_xai42"]
atlas = ExtResource("12_ys1tx")
region = Rect2(370, 0, 370, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8jce"]
atlas = ExtResource("12_ys1tx")
region = Rect2(740, 0, 370, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_u0xoj"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_ttsc2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_lbrap")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys1tx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xai42")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_c8jce")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xai42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys1tx")
}],
"loop": true,
"name": &"stuck",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7lgy5"]
radius = 5.5
height = 23.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6rwvx"]

[node name="Area1" type="Node2D"]
script = ExtResource("1_7fk0h")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_6rwvx")
format = 2
layer_0/name = "one_way_ground"
layer_1/name = "ground"
layer_2/name = "background"
layer_2/tile_data = PackedInt32Array(-131064, 131072, 0, -131065, 65536, 0, -131066, 65536, 0, -131067, 0, 0, -262130, 131072, 0, -262131, 65536, 0, -262132, 65536, 0, -262133, 65536, 0, -262134, 65536, 0, -262135, 0, 0, -131052, 131072, 0, -131053, 65536, 0, -131054, 65536, 0, -131055, 65536, 0, -131056, 0, 0, -262120, 131072, 0, -262121, 65536, 0, -262122, 65536, 0, -262123, 0, 0, 27, 131072, 3, -65509, 131072, 2, -131045, 131072, 1, 26, 65536, 3, -65510, 65536, 2, -131046, 65536, 1, 25, 0, 3, -65511, 0, 2, -131047, 0, 1, -131041, 131072, 3, -196577, 131072, 2, -262113, 131072, 1, -131042, 65536, 3, -196578, 65536, 2, -262114, 65536, 1, -131043, 0, 3, -196579, 0, 2, -262115, 0, 1)
layer_3/name = "counter"
layer_3/tile_data = PackedInt32Array(131088, 131072, 3, 65552, 131072, 2, 16, 131072, 1, 131087, 65536, 3, 65551, 65536, 2, 15, 65536, 1, 131086, 0, 3, 65550, 0, 2, 14, 0, 1, 131084, 131072, 3, 65548, 131072, 2, 12, 131072, 1, 131083, 65536, 3, 65547, 65536, 2, 11, 65536, 1, 131080, 131072, 3, 65544, 131072, 2, 8, 131072, 1, 131079, 65536, 3, 65543, 65536, 2, 7, 65536, 1, 131078, 0, 3, 65542, 0, 2, 6, 0, 1, 131076, 131072, 3, 65540, 131072, 2, 4, 131072, 1, 131075, 65536, 3, 65539, 65536, 2, 3, 65536, 1, 131074, 0, 3, 65538, 0, 2, 2, 0, 1, 131072, 131072, 3, 65536, 131072, 2, 0, 131072, 1, 196607, 65536, 3, 131071, 65536, 2, 65535, 65536, 1, 196606, 0, 3, 131070, 0, 2, 65534, 0, 1, 196604, 131072, 3, 131068, 131072, 2, 65532, 131072, 1, 196603, 65536, 3, 131067, 65536, 2, 65531, 65536, 1, 196602, 0, 3, 131066, 0, 2, 65530, 0, 1, 196600, 131072, 3, 131064, 131072, 2, 65528, 131072, 1, 196599, 65536, 3, 131063, 65536, 2, 65527, 65536, 1, 196598, 0, 3, 131062, 0, 2, 65526, 0, 1, 131082, 0, 3, 65546, 0, 2, 10, 0, 1)

[node name="TileLayer" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_set = ExtResource("2_6rwvx")

[node name="Player" parent="." instance=ExtResource("2_3uyhe")]
position = Vector2(0, -6)

[node name="background" parent="." instance=ExtResource("3_8wi1m")]
z_index = -1000
position = Vector2(25, -133)
scale = Vector2(2.5, 2.5)

[node name="BoilingPot" type="StaticBody2D" parent="."]
position = Vector2(178, -75)
scale = Vector2(0.5, 0.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BoilingPot"]
sprite_frames = SubResource("SpriteFrames_msn23")
animation = &"boilingPot"
autoplay = "boilingPot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoilingPot"]
position = Vector2(-1, -1)
shape = SubResource("CapsuleShape2D_f20k6")

[node name="Area2D" type="Area2D" parent="BoilingPot"]

[node name="CollisionShapeArea" type="CollisionShape2D" parent="BoilingPot/Area2D"]
position = Vector2(-1, -1)
shape = SubResource("CapsuleShape2D_0ufq0")

[node name="forwardButton" type="Area2D" parent="."]
scale = Vector2(0.2, 0.2)
script = ExtResource("6_f20k6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="forwardButton"]
position = Vector2(175, -190)
sprite_frames = SubResource("SpriteFrames_7lgy5")
animation = &"blink"
autoplay = "blink"

[node name="backwardButton" type="Area2D" parent="."]
scale = Vector2(0.2, 0.2)
script = ExtResource("6_f20k6")
action_name = "ui_left"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="backwardButton"]
position = Vector2(-225, -185)
sprite_frames = SubResource("SpriteFrames_6rwvx")
animation = &"blink"
autoplay = "blink"

[node name="spaceButton" type="Area2D" parent="."]
scale = Vector2(0.2, 0.2)
script = ExtResource("6_f20k6")
action_name = "ui_accept"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="spaceButton"]
position = Vector2(-10, -280)
sprite_frames = SubResource("SpriteFrames_ys1tx")
animation = &"blink"
autoplay = "blink"
frame_progress = 0.904331

[node name="Friend" type="Node2D" parent="."]
script = ExtResource("10_u1wc8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Friend"]
position = Vector2(107, -42)
scale = Vector2(0.07, 0.07)
sprite_frames = SubResource("SpriteFrames_u0xoj")
animation = &"idle"
frame_progress = 0.281436
offset = Vector2(0, -50)

[node name="Area2D" type="Area2D" parent="Friend"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Friend/Area2D"]
position = Vector2(107, -43)
rotation = 1.5708
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_7lgy5")

[node name="RopeBar" type="TextureProgressBar" parent="Friend"]
offset_left = 87.0
offset_top = -66.0
offset_right = 287.0
offset_bottom = -46.0
scale = Vector2(0.2, 0.2)
max_value = 20.0
texture_under = ExtResource("12_6rwvx")
texture_progress = ExtResource("13_xl8b6")

[node name="Pit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pit"]
position = Vector2(1000, 300)
rotation = 1.5708
scale = Vector2(5, 200)
shape = SubResource("SegmentShape2D_6rwvx")

[connection signal="body_entered" from="BoilingPot/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Pit" to="." method="_on_pit_body_entered"]
